# ai-infrared

./: build.gradle  local.properties  settings.gradle
facecode/: CMakeLists.txt  build.gradle
facecode/src/androidTest/java/com/ulsee/facecode/: ExampleInstrumentedTest.kt
facecode/src/main/: AndroidManifest.xml
facecode/src/main/cpp/: native-lib.cpp
facecode/src/main/cpp/codustest/: codustest.cpp  codustest.h
facecode/src/main/cpp/facecode_sh/: README.md  any.hpp  base.h  crypto.cpp  crypto.h  csvwriter.hpp  dict.h  facecode.cpp  facecode.h  facecodedecoder_.cpp  facecodedecoder_.h  facecodeencoder_.cpp  facecodeencoder_.h  macros.h  tools.cpp  tools.h
facecode/src/main/cpp/facecode_sh/FloatCompressor/: floatcompressor.cpp  floatcompressor.h  floatdecompressor.cpp  floatdecompressor.h  mydefs.h  rangedecoder.cpp  rangedecoder.h  rangeencoder.cpp  rangeencoder.h  rangemodel.cpp  rangemodel.h
facecode/src/main/cpp/facecode_sh/QRCodeGen/: QrCode.cpp  QrCode.hpp
facecode/src/main/cpp/facecode_sh/pem/: pem.h  pem_common.cpp  pem_common.h  pem_read.cpp  pem_write.cpp
facecode/src/main/cpp/zstd/: zstd.h
facecode/src/main/cpp/zstd/common/: bitstream.h  compiler.h  cpu.h  debug.h  entropy_common.c  error_private.c  error_private.h  fse.h  fse_decompress.c  huf.h  mem.h  pool.c  pool.h  xxhash.c  xxhash.h  zstd_common.c  zstd_errors.h  zstd_internal.h
facecode/src/main/cpp/zstd/compress/: fse_compress.c  hist.c  hist.h  huf_compress.c  zstd_compress.c  zstd_compress_internal.h  zstd_compress_literals.c  zstd_compress_literals.h  zstd_compress_sequences.c  zstd_compress_sequences.h  zstd_double_fast.c  zstd_double_fast.h  zstd_fast.c  zstd_fast.h  zstd_lazy.c  zstd_lazy.h  zstd_ldm.c  zstd_ldm.h  zstd_opt.c  zstd_opt.h  zstdmt_compress.c  zstdmt_compress.h
facecode/src/main/cpp/zstd/decompress/: huf_decompress.c  zstd_ddict.c  zstd_ddict.h  zstd_decompress.c  zstd_decompress_block.c  zstd_decompress_block.h  zstd_decompress_internal.h
facecode/src/main/cpp/zstd/deprecated/: zbuff.h  zbuff_common.c  zbuff_compress.c  zbuff_decompress.c
facecode/src/main/cpp/zstd/dictBuilder/: cover.c  cover.h  divsufsort.c  divsufsort.h  fastcover.c  zdict.c  zdict.h
facecode/src/main/cpp/zstd/legacy/: zstd_legacy.h  zstd_v01.c  zstd_v01.h  zstd_v02.c  zstd_v02.h  zstd_v03.c  zstd_v03.h  zstd_v04.c  zstd_v04.h  zstd_v05.c  zstd_v05.h  zstd_v06.c  zstd_v06.h  zstd_v07.c  zstd_v07.h
facecode/src/main/java/com/ulsee/facecode/: Facecode.kt
facecode/src/test/java/com/ulsee/facecode/: ExampleUnitTest.kt
libFaceRecognition/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
libFaceRecognition/src/main/: AndroidManifest.xml
libFaceRecognition/src/main/cpp/: native_lib.cpp
libFaceRecognition/src/main/cpp/extractor/: faceFeatureMgr.cpp  faceFeatureMgr.h  mbv3FR-S2.4.id.h  mbv3FR-S2.4.mem.h  recofea.cpp  recofea.h  util.cpp  util.h
libFaceRecognition/src/main/java/com/ulsee/sdk/faceverification/: L.java  ULSeeError.java  ULSeeFaceVerificationMgr.java
libFaceRecognition/src/main/res/values/: strings.xml
libTracker/: .gitignore  CMakeLists.txt  READ_ME  build.gradle  proguard-rules.pro
libTracker/src/main/: AndroidManifest.xml
libTracker/src/main/java/com/uls/multifacetrackerlib/: ULSeeError.java  ULSeeTrackerManager.java  UlsMultiTracker.java
libTracker/src/main/java/com/uls/multifacetrackerlib/bean/: Attractiveness.java  Euler.java  FaceAttribute.java  FaceAttributeScore.java  FaceEmotion.java  FaceInfo.java
libTracker/src/main/java/com/uls/multifacetrackerlib/utils/: DeviceRotationDetector.java  DeviceUtil.java  FaceQualityUtils.java  ForeheadAdder.java  ForeheadAdder106pts.java  L.java  PointConvertUtils.java  PointUtils.java  TrackerLines.java  TrackerUtil.java
libTracker/src/main/jni/: Android.mk  Application.mk  Application_FaceAr.mk  Application_FaceTracker_UnityFull.mk  Application_FaceTracker_UnityLight.mk  Application_FaceVerifRecogDetec.mk  Application_FatigueDetection.mk  Application_GlassesTryOn.mk  Application_HairVTO.mk  Application_MultiFaceTracker.mk  Application_SingleFaceTracker.mk  README.md  TVSMultiTrackerEngine.cpp  TVSMultiTrackerEngine.h  TVSTrackerEngine.cpp  TVSTrackerEngine.h  tvstrackerlib.cpp
libTracker/src/main/jni/AcfFaceDetector/: acf_detector.hpp  cascade_model.hpp  common.hpp  feature_pyramid.hpp  ndarray.hpp  utils.hpp
libTracker/src/main/jni/NPDFdt/: LearnGAB.cpp  LearnGAB.hpp  common.cpp
libTracker/src/main/jni/TVSGPULibraryAndroid/: GPUBasicDefinitions.h  TVSGPULibrary.h
libTracker/src/main/jni/TVSGPULibraryAndroid/Objects/: AndGraphicBuffer.cpp  AndGraphicBuffer.h  GPUFramebuffer.cpp  GPUFramebuffer.h  GPUTexture.cpp  GPUTexture.h  GPUVertexData.cpp  GPUVertexData.h
libTracker/src/main/jni/TVSGPULibraryAndroid/Programs/: GPUWarp.cpp  GPUWarp.h
libTracker/src/main/jni/TVSGPULibraryAndroid/Utils/: GBMatWrapping.cpp  GBMatWrapping.h  ShaderCompilation.cpp  ShaderCompilation.h  utilities.cpp  utilities.h
libTracker/src/main/jni/dlib_unused/bound_function_pointer/: bound_function_pointer_kernel_1.h
libTracker/src/main/jni/dlib_unused/dnn/test_for_cuda/: CMakeLists.txt
libTracker/src/main/jni/dlib_unused/dnn/test_for_cudnn/: CMakeLists.txt
libTracker/src/main/jni/extra/: gnu_ld_exported_symbols.txt
libTracker/src/main/jni/facelib/member_function_pointer/: member_function_pointer_kernel_1.h
libTracker/src/main/jni/tvs/: ColorConverter.cpp  ColorConverter.h  ColorConverterBGRA.cpp  ColorConverterBGRA.h  Feature.cpp  Feature.h  FeatureComp.cpp  FeatureComp.h  GrayInputConversion.h  face_pose_predictor.cpp  face_pose_predictor.h  face_tracker.cpp  face_tracker.h  linear_shape_classifier.cpp  linear_shape_classifier.h  linear_shape_regressor.cpp  linear_shape_regressor.h  optical_flow_tracker_efficient.cpp  optical_flow_tracker_efficient.h
libTracker/src/main/jni/tvs/utils/: android_assets.cpp  android_assets.h  geometry.cpp  geometry.h  io.cpp  io.h  linear_model.cpp  linear_model.h  thread_pool.cpp  thread_pool.h
libTracker/src/main/jni/uls-dense-points/: dense_points.cpp  dense_points.h
(+265 files in other folders)
